# example-ffi

./: README.md
example-c/: CMakeLists.txt  main.c
example-ffi/: Cargo.toml  cbindgen.toml
example-ffi/src/: lib.rs
